自动创建主机
