# app/docs/swagger.json
@@ -96,6 +96,13 @@
                         "name": "name",
                         "in": "query",
                         "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "索引",
+                        "name": "index",
+                        "in": "query",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -108,14 +115,14 @@
                 }
             }
         },
-        "/alert/get": {
+        "/alert/query": {
             "get": {
                 "security": [
                     {
                         "BasicAuth": []
                     }
                 ],
-                "description": "查看所有告警规则",
+                "description": "查询单个索引相关告警",
                 "consumes": [
                     "application/json"
                 ],
@@ -125,7 +132,16 @@
                 "tags": [
                     "alert"
                 ],
-                "summary": "Get Alerts",
+                "summary": "Query Alerts",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "索引",
+                        "name": "index",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -138,7 +154,7 @@
         },
         "/monitor/health_check": {
             "get": {
-                "description": "Health Check",
+                "description": "健康检查",
                 "consumes": [
                     "application/json"
                 ],
@@ -165,7 +181,7 @@
             "type": "object",
             "required": [
                 "delay",
-                "hostname",
+                "description",
                 "threshold"
             ],
             "properties": {
@@ -173,9 +189,9 @@
                     "type": "string",
                     "example": "3m"
                 },
-                "hostname": {
+                "description": {
                     "type": "string",
-                    "example": "Zabbix server"
+                    "example": "description"
                 },
                 "threshold": {
                     "type": "string",
